# polyfem-python

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.py  test.py
.github/workflows/: continuous.yml
cmake/: PolyfemPythonDependencies.cmake  PolyfemPythonDownloadExternal.cmake
cmake/recipes/: polyfem.cmake  polyfem_data.cmake  pybind11.cmake
polyfempy/: Problem.py  Problems.py  Selection.py  Settings.py  __init__.py  autoclass.py  command.py
polyfempy/test/: test_pythonic.py
python/: Problems.py  Settings.py  bending.py  inflation.py  test.json  test.py  torsion.py
src/: binding.cpp  raster.cpp  raster.hpp
test/: bending.py  inflation.py  test_bending.py  test_febio.py  test_gravity.py  test_inflation.py  test_plane_hole.py  test_pythonic.py  test_torsion.py  torsion.py
tests/: bending.py  gravity.py  inflation.py  plane_hole.py  torsion.py  utils.py
